# uplcg

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  black.txt  cards.yaml  config.mk  white.txt
client/: elm.json  index.html  style.css
client/src/: Client.elm  Messages.elm
scripts/: create-rooms.sh
server/: cafp.cabal  stack.yaml  uplcg.cabal
server/lib/Cafp/: CookieSocket.hs  Game.hs  InfiniteDeck.hs  Messages.hs
server/lib/Cafp/Main/: GenerateElmTypes.hs  Server.hs
server/lib/Uplcg/: BaseUrl.hs  Cards.hs  Config.hs  CookieSocket.hs  Game.hs  Messages.hs  Version.hs  Views.hs
server/lib/Uplcg/Main/: GenerateElmTypes.hs  Server.hs
server/src/: GenerateElmTypes.hs  GenerateTypes.hs  Server.hs
