Name:          cafp
Version:       0.1.0
Synopsis:      Cards Against Functional Programming
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:     2020 Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Language
Build-type:    Simple
Cabal-version: 1.18

Library
  Default-language: Haskell2010
  Ghc-options:      -Wall
  Hs-source-dirs:   lib

  Exposed-modules:
    Cafp.Messages
    Cafp.Main.GenerateElmTypes
    Cafp.Main.Server

  Build-depends:
    base                 >= 4.9  && < 5,
    elm-bridge           >= 0.5  && < 0.6,
    scotty               >= 0.11 && < 0.12,
    stm                  >= 2.5  && < 2.6,
    text                 >= 1.2  && < 1.3,
    unordered-containers >= 0.2  && < 0.3,
    wai                  >= 3.2  && < 3.3,
    wai-websockets       >= 3.0  && < 3.1,
    warp                 >= 3.3  && < 3.4,
    websockets           >= 0.12 && < 0.13

Executable cafp-generate-elm-types
  Hs-source-dirs:   src
  Main-is:          GenerateElmTypes.hs
  Default-language: Haskell2010
  Ghc-options:      -Wall
  Build-depends:    base, cafp

Executable cafp-server
  Hs-source-dirs:   src
  Main-is:          Server.hs
  Default-language: Haskell2010
  Ghc-options:      -Wall
  Build-depends:    base, cafp
