Name:          uplcg
Version:       0.1.0
Synopsis:      Untitled PL Card Game
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:     2020 Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Language
Build-type:    Simple
Cabal-version: 1.18

Library
  Default-language: Haskell2010
  Ghc-options:      -Wall
  Hs-source-dirs:   lib

  Exposed-modules:
    Uplcg.BaseUrl
    Uplcg.CookieSocket
    Uplcg.Config
    Uplcg.Game
    Uplcg.Main.GenerateElmTypes
    Uplcg.Main.Server
    Uplcg.Messages
    Uplcg.Views

  Build-depends:
    aeson                >= 1.4  && < 1.5,
    async                >= 2.2  && < 2.3,
    base                 >= 4.9  && < 5,
    blaze-html           >= 0.9  && < 0.10,
    bytestring           >= 0.10 && < 0.11,
    elm-bridge           >= 0.5  && < 0.6,
    fast-logger          >= 3.0  && < 3.1,
    hashable             >= 1.3  && < 1.4,
    lens                 >= 4.18 && < 4.19,
    mtl                  >= 2.2  && < 2.3,
    random               >= 1.1  && < 1.2,
    scotty               >= 0.11 && < 0.12,
    stm                  >= 2.5  && < 2.6,
    text                 >= 1.2  && < 1.3,
    time                 >= 1.9  && < 1.10,
    unordered-containers >= 0.2  && < 0.3,
    uuid                 >= 1.3  && < 1.4,
    vector               >= 0.12 && < 0.13,
    vector-algorithms    >= 0.8  && < 0.9,
    vector-instances     >= 3.4  && < 3.5,
    vector-shuffling     >= 1.1  && < 1.2,
    wai                  >= 3.2  && < 3.3,
    wai-websockets       >= 3.0  && < 3.1,
    warp                 >= 3.3  && < 3.4,
    websockets           >= 0.12 && < 0.13

Executable uplcg-generate-elm-types
  Hs-source-dirs:   src
  Main-is:          GenerateElmTypes.hs
  Default-language: Haskell2010
  Ghc-options:      -Wall
  Build-depends:    base, uplcg

Executable uplcg-server
  Hs-source-dirs:   src
  Main-is:          Server.hs
  Default-language: Haskell2010
  Ghc-options:      -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N"
  Build-depends:    base, uplcg
